# rules_conda

./: .bazelrc  BUILD  MODULE.bazel  README.md  extensions.bzl  lockfile.bzl  python.bzl  requirements.txt  requirements_lock.txt
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh  test.yml
conda/: BUILD  extensions.bzl
conda/cc/: BUILD  import.bzl
conda/environment/: BUILD  defs.bzl  providers.bzl
conda/environment/private/: BUILD  environment_glob.bzl  run_binary.bzl
conda/environment/private/lock/: BUILD  lock.bzl  lock.py
conda/extensions/: BUILD  module.bzl
conda/extensions/private/: BUILD  environment.bzl  install.py  parse_lockfile.py  pkg_config_repo.bzl  pkg_config_repo_linker.bzl  pkg_config_repo_tools.bzl  pkg_config_rule.bzl  template.BUILD
conda/extensions/private/pkg_config_tool/: BUILD  pkg-config-env.yml
conda/lock/: BUILD  lockfile.bzl
conda/private/environment/: template.BUILD
conda/private/lock/: BUILD
conda/python/: BUILD  toolchain.bzl
docs/: BUILD  environment.md  environment_providers.md  extensions.md  lockfile.md
environment/: BUILD  defs.bzl  environment.bzl  providers.bzl
environment/private/: BUILD  environment_glob.bzl  import_library.bzl  run_binary.bzl
example/: BUILD  MODULE.bazel  env2.yml  libpng-env.yml  python-env.yml  zlib-env.yml
example/binary/: BUILD  test.sh
example/glob/: BUILD
example/import_library/: BUILD  test.cpp
example/lockfile/: python-env.yml
example/pkg_config/: BUILD  test.cpp
example/python_toolchain/: BUILD  toolchain_test.py
private/environment/: environment.bzl  install.py  template.BUILD
private/lock/: BUILD  lock.py  lock.sh  update.sh
private/repo/: conda.bzl  install.py  packages.py  parse_lockfile.py  template.BUILD
test/: BUILD  MODULE.bazel  env1.yml  env2.yml  test.sh
tools/: BUILD
