module(
    name = "rules_conda",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.3.0")

bazel_dep(name = "aspect_rules_lint", version = "1.3.5", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")
use_repo(pip, "pypi_311_py_rattler")
