module(name = "test")

bazel_dep(name = "rules_conda")
bazel_dep(name = "platforms", version = "1.0.0")

local_path_override(
    module_name = "rules_conda",
    path = "..",
)

conda = use_extension("@rules_conda//conda/extensions:module.bzl", "conda")
conda.environment(
    name = "python",
    lockfile = "//:conda.lock",
)
conda.environment(
    name = "zlib",
    lockfile = "//:conda.lock",
)
conda.environment(
    name = "python-linux-aarch64",
    environment = "python",
    lockfile = "//:conda.lock",
    platform = "linux-aarch64",
)
conda.environment(
    name = "libpng",
    lockfile = "//:conda.lock",
)
conda.pkg_config(
    name = "libpng",
    environment = "libpng",
    modules = ["libpng"],
)
conda.pkg_config(
    name = "libpng-static",
    environment = "libpng",
    modules = ["libpng"],
    static = True,
)

# Host platform repos
use_repo(conda, "python")
use_repo(conda, "zlib")
use_repo(conda, "libpng")

# Specific platform repos
use_repo(conda, "python-linux-aarch64")

# Register the python toolchain
register_toolchains("//python_toolchain")
