module(name = "test")

bazel_dep(name = "rules_conda")
bazel_dep(name = "platforms", version = "1.0.0")

local_path_override(
    module_name = "rules_conda",
    path = "..",
)

conda = use_extension("@rules_conda//conda:extensions.bzl", "conda")
conda.environment(
    name = "python",
    lockfile = "//lockfile:conda.lock",
)
conda.environment(
    name = "zlib",
    lockfile = "//lockfile:conda.lock",
)
conda.environment(
    name = "zlib-linux-aarch64",
    environment = "zlib",
    lockfile = "//lockfile:conda.lock",
    platform = "linux-aarch64",
)

# Host platform repos
use_repo(conda, "python")
use_repo(conda, "zlib")

# Specific platform repos
use_repo(conda, "zlib-linux-aarch64")

# Register the python toolchain
register_toolchains("//python_toolchain")
