module(name = "test")

bazel_dep(name = "rules_conda")
local_path_override(
    module_name = "rules_conda",
    path = "..",
)

conda = use_extension("@rules_conda//:extensions.bzl", "conda")
conda.parse(lockfile = "//:conda.lock")

# Host platform repos
use_repo(conda, "env1")
use_repo(conda, "env2")

# Specific platform repos
use_repo(conda, "env1-linux-aarch64")
